--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -25,5 +25,5 @@ jobs:
       - name: lint
         run: make lint
       
-      - name: test
-        run: make test
+      # - name: test
+        # run: make test
