--- a/pyproject.toml
+++ b/pyproject.toml
@@ -41,6 +41,7 @@ dev = [
     "watchfiles>=0.19.0",
     "uvicorn[standard] >=0.22.0, <0.23",
     "sse-starlette>=0.2.2",
+    "sqlmesh[github]"
 ]
 
 [project.urls]
@@ -83,3 +84,4 @@ exclude_lines = [
     'pragma: no cover',
     'raise NotImplementedError'
 ]
+
