--- a/src/features/tests/test_cust_cost_spread.yaml
+++ b/src/features/tests/test_cust_cost_spread.yaml
@@ -5,31 +5,31 @@ test_cust_cost_spread:
     query:
     - part: 0
       ts: 2024-11-07 00:00:00
-      cust_cost_spread: 143.04160000000002
+      some_breaking_column: 143.04160000000002
     - part: 0
       ts: 2024-11-10 00:00:00
-      cust_cost_spread: 143.04160000000002
+      some_breaking_column: 143.04160000000002
     - part: 0
       ts: 2024-11-14 00:00:00
-      cust_cost_spread: 143.04160000000002
+      some_breaking_column: 143.04160000000002
     - part: 0
       ts: 2024-11-15 00:00:00
-      cust_cost_spread: 143.04160000000002
+      some_breaking_column: 143.04160000000002
     - part: 0
       ts: 2024-11-17 00:00:00
-      cust_cost_spread: 143.04160000000002
+      some_breaking_column: 143.04160000000002
     - part: 1
       ts: 2024-11-07 00:00:00
-      cust_cost_spread: 238.3936
+      some_breaking_column: 238.3936
     - part: 1
       ts: 2024-11-10 00:00:00
-      cust_cost_spread: 238.3936
+      some_breaking_column: 238.3936
     - part: 1
       ts: 2024-11-14 00:00:00
-      cust_cost_spread: 238.3936
+      some_breaking_column: 238.3936
     - part: 1
       ts: 2024-11-15 00:00:00
-      cust_cost_spread: 238.3936
+      some_breaking_column: 238.3936
     - part: 1
       ts: 2024-11-17 00:00:00
-      cust_cost_spread: 238.3936
+      some_breaking_column: 238.3936
