--- a/.github/workflows/sqlmesh.yml
+++ b/.github/workflows/sqlmesh.yml
@@ -42,5 +42,20 @@ jobs:
         run: make setup
         shell: bash
       - name: Run CI/CD Bot
+        id: run-bot
         run: |
           uv run sqlmesh_cicd -p ${{ github.workspace }}/src/features github --token ${{ secrets.GITHUB_TOKEN }} run-all
+      - name: commit db on success
+        id: do-after-pr-env-sync
+        if: steps.run-bot.outputs.prod_environment_synced == 'success'
+        run: |
+          git fetch origin
+          if git diff --quiet HEAD -- db.db; then
+            echo "No changes detected in db.db."
+          else
+            echo "Changes detected in db.db. Committing and pushing changes..."
+            git config --global user.name "GitHub Actions Bot"
+            git config --global user.email "actions@github.com"
+            git add db.db
+            git commit -m "Update db.db after CI/CD run"
+            git push
