--- a/.github/workflows/sqlmesh.yml
+++ b/.github/workflows/sqlmesh.yml
@@ -50,14 +50,9 @@ jobs:
         if: steps.run-bot.outputs.prod_environment_synced == 'success'
         run: |
           set -x
-          git fetch origin
-          if git diff --quiet HEAD -- db.db; then
-            echo "No changes detected in db.db."
-          else
-            echo "Changes detected in db.db. Committing and pushing changes..."
-            git config --global user.name "GitHub Actions Bot"
-            git config --global user.email "actions@github.com"
-            git add db.db
-            git commit -m "Update db.db after CI/CD run"
-            git push
-          fi
+          echo "Changes detected in db.db. Committing and pushing changes..."
+          git config --global user.name "GitHub Actions Bot"
+          git config --global user.email "actions@github.com"
+          git add -f ${{ github.workspace }}/db.db
+          git commit -m "Update db.db after CI/CD run" --allow-empty
+          git push
