--- a/.github/workflows/sqlmesh.yml
+++ b/.github/workflows/sqlmesh.yml
@@ -55,4 +55,4 @@ jobs:
           git config --global user.email "actions@github.com"
           git add -f ${{ github.workspace }}/db.db
           git commit -m "Update db.db after CI/CD run" --allow-empty
-          git push
+          git push origin HEAD:main
