--- a/.github/workflows/sqlmesh.yml
+++ b/.github/workflows/sqlmesh.yml
@@ -51,9 +51,8 @@ jobs:
         run: |
           set -x
           echo "Changes detected in db.db. Committing and pushing changes..."
-          git pull origin main
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
           git add -f ${{ github.workspace }}/db.db
           git commit -m "Update db.db after CI/CD run" --allow-empty
-          git push origin HEAD:main
+          git push --force origin HEAD:main
