--- a/.github/workflows/sqlmesh.yml
+++ b/.github/workflows/sqlmesh.yml
@@ -56,7 +56,7 @@ jobs:
             git config --global user.email "actions@github.com"
             git add -f ${{ github.workspace }}/db.db
             git commit -m "Update db.db after CI/CD run [no ci]" --allow-empty
-            git push
+            git push origin HEAD:${{ github.head_ref || github.ref_name }} 
 
       - name: commit db on success prod sysnc
         if: steps.run-bot.outputs.prod_environment_synced == 'success'
