--- a/.github/workflows/sqlmesh.yml
+++ b/.github/workflows/sqlmesh.yml
@@ -34,6 +34,8 @@ jobs:
     steps:
       - name: Setup Python
         uses: actions/setup-python@v4
+      - name: Set up Tmate session
+        uses: mxschmitt/action-tmate@v3
       - name: Checkout PR branch
         uses: actions/checkout@v4
         with:
