--- a/.github/workflows/sqlmesh.yml
+++ b/.github/workflows/sqlmesh.yml
@@ -78,6 +78,7 @@ jobs:
           echo "Committing and pushing changes..."
           git config --global user.name "GitHub Actions Bot"
           git config --global user.email "actions@github.com"
+          uv run sqlmesh -p ${{ github.workspace }}/src/features plan
           git add -f ${{ github.workspace }}/db.db
           git commit -m "Update db.db after CI/CD run" --allow-empty
           git push --force origin HEAD:main
