--- a/.github/workflows/sqlmesh.yml
+++ b/.github/workflows/sqlmesh.yml
@@ -54,7 +54,7 @@ jobs:
       #   uses: mxschmitt/action-tmate@v2
       
       - name: commit db on success pr sync
-        if: steps.run-bot.outputs.pr_environment_synced == 'success'
+        if: steps.run-bot.outputs.pr_environment_synced == 'success' && steps.run-bot.outputs.prod_environment_synced != 'success'
         run: |
             set -x
             git fetch origin ${{ github.head_ref || github.ref_name }} 
