--- a/.github/workflows/sqlmesh.yml
+++ b/.github/workflows/sqlmesh.yml
@@ -66,7 +66,7 @@ jobs:
             git config --global user.name "GitHub Actions"
             git config --global user.email "actions@github.com"
             git add -f ${{ github.workspace }}/db.db
-            git commit -m "Update virtual environment after CI PR sync [no ci]" --allow-empty
+            git commit -m "Update virtual environment after CI PR sync" --allow-empty
             git push
 
       - name: commit db on success prod sysnc
