--- a/.github/workflows/sqlmesh.yml
+++ b/.github/workflows/sqlmesh.yml
@@ -22,6 +22,7 @@ jobs:
   sqlmesh:
     name: SQLMesh Actions Workflow
     runs-on: ubuntu-latest
+    if: github.actor != 'github-actions[bot]'
     permissions:
       # Required to access code in PR
       contents: write
@@ -53,20 +54,21 @@ jobs:
       # - name: Set up Tmate session
       #   uses: mxschmitt/action-tmate@v2
       
-      - name: commit db on success pr sync
-        if: steps.run-bot.outputs.pr_environment_synced == 'success' && steps.run-bot.outputs.prod_environment_synced != 'success'
-        run: |
-            git fetch origin ${{ github.head_ref || github.ref_name }} 
-            git checkout ${{ github.head_ref || github.ref_name }} 
-            git pull
-            uv run sqlmesh -p ${{ github.workspace }}/src/features plan real_mlops_${{ github.event.issue.pull_request && github.event.issue.number || github.event.pull_request.number  }}
-            echo $(git status)
-            echo "Committing and pushing changes..."
-            git config --global user.name "GitHub Actions Bot"
-            git config --global user.email "actions@github.com"
-            git add -f ${{ github.workspace }}/db.db
-            git commit -m "Update virtual environment after CI PR sync [no ci]" --allow-empty
-            git push
+      # TODO: The github bot for some reason breaks the required checks.... kinda nuts
+      # - name: commit db on success pr sync
+      #   if: steps.run-bot.outputs.pr_environment_synced == 'success' && steps.run-bot.outputs.prod_environment_synced != 'success'
+      #   run: |
+      #       git fetch origin ${{ github.head_ref || github.ref_name }} 
+      #       git checkout ${{ github.head_ref || github.ref_name }} 
+      #       git pull
+      #       uv run sqlmesh -p ${{ github.workspace }}/src/features plan real_mlops_${{ github.event.issue.pull_request && github.event.issue.number || github.event.pull_request.number  }}
+      #       echo $(git status)
+      #       echo "Committing and pushing changes..."
+      #       git config --global user.name "GitHub Actions"
+      #       git config --global user.email "actions@github.com"
+      #       git add -f ${{ github.workspace }}/db.db
+      #       git commit -m "Update virtual environment after CI PR sync" --allow-empty
+      #       git push
 
       - name: commit db on success prod sysnc
         if: steps.run-bot.outputs.prod_environment_synced == 'success'
